maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: not found: value somme
  somme = somme+1
  ^Escaper:34: error: not found: value somme
    somme = somme+1
    ^Escaper:35: error: not found: value somme
    if(somme == 0)
       ^